plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.6.5'
}

group 'io.openliberty.tools'
version '0.0.7'

sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    //Add junit dependency back when tests are added
    //testImplementation group: 'junit', name: 'junit', version: '4.13.1'
    implementation 'org.apache.maven:maven-artifact:3.6.3'
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version '2021.3.2'
    updateSinceUntilBuild false
    plugins 'terminal'
}

patchPluginXml {
    changeNotes """
        <b> 0.0.7 </b>
        <ul>
        <li> Rename plugin to Liberty Tools for IntelliJ
        </ul>
        <b> 0.0.6 </b>
        <ul>
        <li> Fix release
        </ul>
        <b> 0.0.5 </b>
        <ul>
        <li> Update action wording and documentation
        </ul>
        <b> 0.0.4 </b>
        <ul>
        <li> Removed tech preview wording from "start in container" action
        </ul>
        <b> 0.0.3 </b>
        <ul>
        <li> Updated plugin description
        </ul>
        <b> 0.0.2 </b>
        <ul>
        <li> Added start in container (tech preview) action
        </ul>
        <b> 0.0.1 </b>
        <ul>
        <li> First preview release
        </ul>
        """
    version project.version
}